--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -2,7 +2,7 @@ apiVersion: skaffold/v1beta2
 kind: Config
 build:
   artifacts:
-  - image: freeo/goqs
+  - image: dev-infra-240819/goqs
     context: .
     docker: {}
   tagPolicy:
