Try: Docker Registry Project: Hard code to helm Makefile

--- a/charts/goqs/templates/deployment.yaml
+++ b/charts/goqs/templates/deployment.yaml
@@ -22,6 +22,8 @@ spec:
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        # XXX
+        # image: "eu.gcr.io/dev-infra-240819/goqs:0.0.8"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
 {{- range $pkey, $pval := .Values.env }}
