Try: Hard Code helm deployment.yaml template

--- a/charts/goqs/templates/deployment.yaml
+++ b/charts/goqs/templates/deployment.yaml
@@ -21,9 +21,9 @@ spec:
     spec:
       containers:
       - name: {{ .Chart.Name }}
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        # image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         # XXX
-        # image: "eu.gcr.io/dev-infra-240819/goqs:0.0.8"
+        image: eu.gcr.io/dev-infra-240819/goqs:"{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
 {{- range $pkey, $pval := .Values.env }}
