Skaffold.yaml manual tags

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,4 +1,5 @@
-apiVersion: skaffold/v1beta2
+# apiVersion: skaffold/v1beta2
+apiVersion: skaffold/v1beta11
 kind: Config
 build:
   artifacts:
@@ -7,7 +8,9 @@ build:
     docker: {}
   tagPolicy:
     envTemplate:
-      template: '{{.DOCKER_REGISTRY}}/{{.IMAGE_NAME}}:{{.VERSION}}'
+      # template: '{{.DOCKER_REGISTRY}}/{{.IMAGE_NAME}}:{{.VERSION}}'
+      # relevant for `skaffold dev`
+      template: 'eu.gcr.io/{{.IMAGE_NAME}}:skaffold'
   local: {}
 deploy:
   kubectl: {}
@@ -16,7 +19,8 @@ profiles:
   build:
     tagPolicy:
       envTemplate:
-        template: '{{.DOCKER_REGISTRY}}/{{.IMAGE_NAME}}:{{.DIGEST_HEX}}'
+        # template: '{{.DOCKER_REGISTRY}}/{{.IMAGE_NAME}}:{{.DIGEST_HEX}}'
+        template: 'eu.gcr.io/{{.IMAGE_NAME}}:skaffold'
     local: {}
   deploy:
     helm:
@@ -25,4 +29,5 @@ profiles:
         chartPath: charts/goqs
         setValueTemplates:
           image.repository: '{{.DOCKER_REGISTRY}}/{{.IMAGE_NAME}}'
-          image.tag: '{{.DIGEST_HEX}}'
+          # image.tag: '{{.DIGEST_HEX}}'
+          image.tag: 'skaffold'
