--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,26 +1,37 @@
-apiVersion: skaffold/v1beta2
+# apiVersion: skaffold/v1beta2
 # apiVersion: skaffold/v1beta11
+apiVersion: skaffold/v1beta10
 kind: Config
 build:
+  tagPolicy:
+      sha256: {}
   artifacts:
-  - image: dev-infra-240819/goqs
+  - image: eu.gcr.io/dev-infra-240819/goqs
     context: .
     docker: {}
-  tagPolicy:
-    envTemplate:
-      # template: '{{.DOCKER_REGISTRY}}/{{.IMAGE_NAME}}:{{.VERSION}}'
+    # envTemplate:
+    #   template: '{{.DOCKER_REGISTRY}}/{{.IMAGE_NAME}}:{{.VERSION}}'
       # relevant for `skaffold dev`
-      template: 'eu.gcr.io/{{.IMAGE_NAME}}:skaffold'
+      # template: 'eu.gcr.io/{{.IMAGE_NAME}}:skaffold'
+      # :skaffold doesn't always pull the latest
+      # template: 'eu.gcr.io/{{.IMAGE_NAME}}@sha256:{{.VERSION}}'
+
   local: {}
 deploy:
   kubectl: {}
 profiles:
 - name: dev
   build:
+    # tagPolicy:
+    #   envTemplate:
+    #     # template: '{{.DOCKER_REGISTRY}}/{{.IMAGE_NAME}}:{{.DIGEST_HEX}}'
+    #     # template: 'eu.gcr.io/{{.IMAGE_NAME}}:skaffold'
+    #     # template: 'eu.gcr.io/{{.IMAGE_NAME}}@sha256:{{.VERSION}}'
+    #     template: '{{.DOCKER_REGISTRY}}/{{.IMAGE_NAME}}:{{.DIGEST}}'
     tagPolicy:
-      envTemplate:
-        # template: '{{.DOCKER_REGISTRY}}/{{.IMAGE_NAME}}:{{.DIGEST_HEX}}'
-        template: 'eu.gcr.io/{{.IMAGE_NAME}}:skaffold'
+        sha256: {}
+    artifacts:
+    - image: eu.gcr.io/dev-infra-240819/goqs
     local: {}
   deploy:
     helm:
@@ -30,4 +41,5 @@ profiles:
         setValueTemplates:
           image.repository: '{{.DOCKER_REGISTRY}}/{{.IMAGE_NAME}}'
           # image.tag: '{{.DIGEST_HEX}}'
-          image.tag: 'skaffold'
+          # image.tag: 'skaffold'
+          image.tag: '{{.DIGEST}}'
